--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,11 @@ nav {
   border: 2px solid;
   background: dark wheat;
 }
+
+.experience>.one>h2>ul>li{
+  list-style: none;
+}
+
+.three>h2>ul>li{
+  list-style: none;
+}
