--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+ text-align: center;
 }
 
 header {
@@ -33,6 +34,9 @@ nav {
 .three {
   border: 2px solid;
   text-align: center;
+  text-align: center;
+  align-items:center;
+ justify-content: center;
 }
 
 .footer {
@@ -56,10 +60,13 @@ nav {
   background: dark wheat;
 }
 
-.experience>.one>h2>ul>li{
+.dotremove1{
   list-style: none;
+  padding-left: 10px;
 }
 
-.three>h2>ul>li{
+.dotremove2{
   list-style: none;
+  padding-left: 5px;
 }
+
